@@ -1,0 +1,19 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Form Dispatcher Test Two</title>
+  </head>
+
+  <body>
+    <:include testDispatch2.pyinc:>
+
+
+
+    <hr>
+    <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
+<!-- Created: Mon Nov 25 18:38:53 EST 2002 -->
+<!-- hhmts start -->
+Last modified: Mon Nov 25 18:39:48 EST 2002
+<!-- hhmts end -->
+  </body>
+</html>
